--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Useful tools i made for myself both as a tool for pen and paper worldbuilding, but also to improve my HTML, CSS, and JS skills.",
   "main": "index.js",
   "scripts": {
+    "start": "npx serve ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
